Modicación de rutas de imagenes para correcta visualización

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             style="font-family: 'Dosis', sans-serif";>Acerca de mi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-light fs-5" href="/index.html" style="font-family: 'Dosis', sans-serif"; role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-light fs-5" href="index.html" style="font-family: 'Dosis', sans-serif"; role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Forks
                         </a>
                         <ul class="dropdown-menu">
@@ -129,7 +129,7 @@
         </div>
 
         <div class="card mb-3 mt-3 w-75 mx-auto">
-            <img src="/assets/img/cuppon.png" class="card-img-top" alt="Pagina de cupones">
+            <img src="assets/img/cuppon.png" class="card-img-top" alt="Pagina de cupones">
             <div class="card-body">
                 <h5 class="card-title"><a style="color:#1C9084" href="https://mdzp07.github.io/DesafioCuppon/"
                         target="_blank">Cuppon Page</a></h5>
@@ -140,7 +140,7 @@
         </div>
 
         <div class="card mb-3 mt-5 w-75 mx-auto">
-            <img src="/assets/img/miportafolio.png" class="card-img-top" alt="Portafolio">
+            <img src="assets/img/miportafolio.png" class="card-img-top" alt="Portafolio">
             <div class="card-body">
                 <h5 class="card-title"><a style="color:#1C9084" href="index.html" target="_blank">Portafolio</a></h5>
                 <p class="card-text"><small class="text-muted">Mi portafolio creado con Bootstrap</small></p>
