--- a/index2.html
+++ b/index2.html
@@ -27,32 +27,53 @@
         </div>
     </nav>
     <div class="fotoperfil">
-        <img src="assets/img/FOTO CV.jpeg" class="rounded-circle mx-auto d-block pt-5 pb-5" style="width: 25%"; alt="Foto de Perfil">
+        <img src="assets/img/FOTO CV.jpeg" class="rounded-circle mx-auto d-block pt-5 pb-5" style="width: 25%" ;
+            alt="Foto de Perfil">
     </div>
-    <h4>Mi nombre es Daniela, tengo 25 años y soy de Venezuela. Me caracterizo por ser una persona motivada, alegre, perseverante y organizada; me gusta asumir retos que desafíen mis conocimientos. Poseo una gran capacidad de adaptación y flexibilidad ante los cambios.</h4>
-    <section><h6>Mis Soft Skills</h6></section>
+    <h4>Mi nombre es Daniela, tengo 25 años y soy de Venezuela. Me caracterizo por ser una persona motivada, alegre,
+        perseverante y organizada; me gusta asumir retos que desafíen mis conocimientos. Poseo una gran capacidad de
+        adaptación y flexibilidad ante los cambios.</h4>
+    <section>
+        <h6>Mis Soft Skills</h6>
+    </section>
     <div class="progress mx-auto" style="height: 30px; width: 80%;">
-        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">PROACTIVIDAD</div>
-    </div>
-    <br>
-    <div class="progress mx-auto" style="height: 30px; width: 80%;">
-        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 88%;" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">CREATIVIDAD</div>
-    </div>
-    <br>
-    <div class="progress mx-auto" style="height: 30px; width: 80%;">
-        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 85%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">TRABAJO EN EQUIPO</div>
+        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 90%;"
+            aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">PROACTIVIDAD</div>
     </div>
     <br>
     <div class="progress mx-auto" style="height: 30px; width: 80%;">
-        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 94%;" aria-valuenow="94" aria-valuemin="0" aria-valuemax="100">ADAPTABILIDAD</div>
+        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 88%;"
+            aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">CREATIVIDAD</div>
     </div>
     <br>
     <div class="progress mx-auto" style="height: 30px; width: 80%;">
-        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 82%;" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100">COMUNICACIÓN</div>
+        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 85%;"
+            aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">TRABAJO EN EQUIPO</div>
     </div>
     <br>
     <div class="progress mx-auto" style="height: 30px; width: 80%;">
-        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">TRABAJO BAJO PRESIÓN</div>
+        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 94%;"
+            aria-valuenow="94" aria-valuemin="0" aria-valuemax="100">ADAPTABILIDAD</div>
+    </div>
+    <br>
+    <div class="progress mx-auto" style="height: 30px; width: 80%;">
+        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 82%;"
+            aria-valuenow="82" aria-valuemin="0" aria-valuemax="100">COMUNICACIÓN</div>
+    </div>
+    <br>
+    <div class="progress mx-auto" style="height: 30px; width: 80%;">
+        <div class="progress-bar bg-warning fs-6" role="progressbar" aria-label="Skill1" style="width: 85%;"
+            aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">TRABAJO BAJO PRESIÓN</div>
+    </div>
+
+    <div class="finalsection">
+        <p>Enlaces de interés</p>
+        <a href="https://github.com/mdzp07" target="_blank">
+            <img src="assets/img/github-log.png" width="160px" , height="95px" , alt="Github">
+        </a>
+        <a href="https://www.linkedin.com/in/daniela-zambrano-321892144/" target="_blank" style="margin-left:1rem;">
+            <img src="assets/img/logo-link.png" width="50px" , height="50px" , alt="Linkedin">
+        </a>
     </div>
     <footer>
         <h6>Desarrollado por Daniela Zambrano, en Desafío Latam 2022</h6>
