Agregando links de los fork al proyecto

--- a/index.html
+++ b/index.html
@@ -33,18 +33,22 @@
                 <ul class="navbar-brand navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active text-light fs-5" aria-current="page" href="index2.html"
-                            style="font-family: 'Dosis', sans-serif";>Acerca de mi</a>
+                            style="font-family: 'Dosis', sans-serif" ;>Acerca de mi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-light fs-5" href="index.html" style="font-family: 'Dosis', sans-serif"; role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Forks
+                        <a class="nav-link dropdown-toggle text-light fs-5" href="index.html"
+                            style="font-family: 'Dosis', sans-serif" ; role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Forks
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" style="color: #1C9084"; href="#">Fork 1</a></li>
-                          <li><a class="dropdown-item" style="color: #1C9084"; href="#">Fork 2</a></li>
-                          <li><a class="dropdown-item" style="color: #1C9084"; href="#">Fork 3</a></li>
+                            <li><a class="dropdown-item" style="color: #1C9084" ;
+                                    href="https://mdzp07.github.io/Trabajo_CSS_Polyn/">Trabajo CSS - Polyn Gonzalez</a>
+                            </li>
+                            <li><a class="dropdown-item" style="color: #1C9084" ; href="https://mdzp07.github.io/Proyecto3_Posicionamiento_EmanuelQuintrecura-/">Trabajo Posicionamiento - Emanuel Quintrecura</a></li>
+                            <li><a class="dropdown-item" style="color: #1C9084" ; href="#">Desafio 5 - Github</a></li>
                         </ul>
-                      </li>
+                    </li>
                 </ul>
             </div>
 
